tests/paczka1/fuzzy1/56796380.err
Error in line 4: gxeafud S300 50,9
Error in line 12: gxeafud S693 96,4
Error in line 23: v88l9B S300 51,9
